text input overflow resolved

--- a/style.css
+++ b/style.css
@@ -319,9 +319,10 @@ body {
   line-height: 60px;
   text-align: right;
   padding-right: 20px;
-  width: 100%;
+  width: 312px;
   font-size: 32px;
   letter-spacing: 4px;
+  overflow: hidden;
 }
 
 .calculator {
